--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 
 <meta property="og:image" content="https://i.imgur.com/9xiPyyv.png" />
+        <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
     </head>
     <body>
-    <script type="jQuery" src="//code.jquery.com/jquery-2.2.4.min.js)"></script>
    <br /><br /><p><b>Remember that no matter what, <br /> your hard work <br /> will pay off one day.</b> 
   <br /><br /> <br /><br /><br /><br /><br /><br /><br /><br /><br /> <br /><br /> <br /><br /> <b>Self reminder: Try not to <br /> stress a lot too... 😂😂😂</b></p>
       <div id="deadline">
@@ -28,6 +28,7 @@
       <circle id="designer-head" fill="#FEFFFE" cx="516.083" cy="53.25" r="6.083"/> <g id="designer-arm-grop"> 
       <path id="designer-arm" fill="#FEFFFE" d="M505.875,64.875c0,0,5.875,7.5,13.042,6.791c6.419-0.635,11.833-2.791,13.458-4.041s2-3.5,0.25-3.875 s-11.375,5.125-16,3.25c-5.963-2.418-8.25-7.625-8.25-7.625l-2,1.125L505.875,64.875z"/> 
       <path id="designer-pen" fill="#FEFFFE" d="M525.75,59.084c0,0-0.423-0.262-0.969,0.088c-0.586,0.375-0.547,0.891-0.547,0.891l7.172,8.984l1.261,0.453 l-0.104-1.328L525.75,59.084z"/> </g> </svg> <div class="deadline-days"> Deadline <span class="day">7</span> <span class="days">days</span>
-      </div> </div>  
+      </div> </div> 
+        <link rel="stylesheet"type="text/css" href="styling.css">
     </body>
 </html>
