--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 
 <meta property="og:image" content="https://i.imgur.com/9xiPyyv.png" />
-        <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+          <script type="jQuery" src="//code.jquery.com/jquery-2.2.4.min.js)"></script>
     </head>
     <body>
    <br /><br /><p><b>Remember that no matter what, <br /> your hard work <br /> will pay off one day.</b> 
